<resources>
    <string name="app_name">Software Engineering App</string>
    <string name="title_level1">Level 1</string>
    <string name="title_level2">Level 2</string>
    <string name="title_level3">Level 3</string>
    <string name="title_test">Test</string>
    <string name="motors_speed">Velocità motori</string>
    <string name="grab_speed">Velocità braccio meccanico</string>
    <string name="movement">Movimento</string>
    <string name="move_up">Avanti</string>
    <string name="move_left">Sinistra</string>
    <string name="move_right">Destra</string>
    <string name="move_down">Indietro</string>
    <string name="grab">Braccio meccanico</string>
    <string name="pickup">Afferra</string>
    <string name="drop">Molla</string>
    <string name="gyro">Giroscopio</string>
    <string name="prc">Percentuale</string>
    <string name="connect">connect</string>
    <string name="numRow">Numero di Righe</string>
    <string name="numCol">Numero di Colonne</string>
    <string name="stop">Stop!</string>
    <string name="start">Avvia</string>
    <string name="start_level_label">Avvia Livello</string>
    <string name="label_level2">Inserisci il numero di righe e colonne del campo</string>
    <string name="create_grid">Crea griglia</string>

</resources>
